# dfm

./: Cargo.toml  README.md
src/: cli.rs  error.rs  git.rs  lib.rs  main.rs  setup.rs  utils.rs
src/commands/: add.rs  clone.rs  list.rs  mod.rs  push.rs  remote.rs  remove.rs  reset.rs  sync.rs  update.rs
