[package]
name = "dfmn"
version = "0.1.0"
edition = "2021"
authors = ["Felipe Rodrigues de Santana Freitag"]
repository = "https://github.com/freitagfelipe/dfmn"
license = "MIT"
readme = "README.md"
description = "A simple and easy-to-use dotfile manager"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
colored = "2.0.0"
online = "4.0.1"
regex = "1.7.1"
thiserror = "1.0.38"
walkdir = "2.3.2"
